test/files/neg/case-collision-multifile/one.scala
//> using options -Werror -Ybackend-parallelism 1
class HotDog
